# dotfiles

./: .bumpversion.cfg  .gitignore  .luacheckrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
.luarocks/etc/luarocks/: config-5.4.lua
dotfiles/: .chezmoiexternal.toml
dotfiles/dot_config/: starship.toml
dotfiles/dot_config/alacritty/: alacritty.toml  alacritty.yml
dotfiles/dot_config/nvim/: init.lua  lazy-lock.json
dotfiles/dot_config/nvim/lua/fedejaure/: lazy.lua
dotfiles/dot_config/nvim/lua/fedejaure/plugins/: alpha-nvim.lua
dotfiles/dot_config/private_fish/: config.fish
dotfiles/dot_config/private_fish/completions/: inv.fish  poetry.fish
dotfiles/dot_config/private_fish/conf.d/: aliases.fish  path.fish
dotfiles/dot_config/tmux/: tmux.conf
