
[tool.poetry]
name = "deeptune"
version = "0.1.0"
description = "My Personal dotfiles."
authors = ["Federico Jaureguialzo <fedejaure@example.com>"]
readme = "README.md"
homepage = "https://github.com/fedejaure/dotfiles"
repository = "https://github.com/fedejaure/dotfiles"
keywords = ["dotfiles"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
package-mode = false

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/dotfiles/issues"

[tool.poetry.dependencies]
python = "<3.12,>=3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
invoke = "^2.2.0"
bump2version = "^1.0.1"

[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
ruff = "^0.11.12"

[tool.poetry.group.security.dependencies]
safety = "^3.2.14"

[tool.poetry.group.typing.dependencies]
mypy = "^1.16.0"

[tool.ruff]
target-version = "py311"
output-format = "full"
line-length = 99
fix = true
extend-exclude = [
    "docs/*",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # flake8
  "C",  # mccabe
  "I",  # isort
  "N",  # pep8-naming
  "D",  # flake8-docstrings
  "ANN",  # flake8-annotations
  "S",  # flake8-bandit
  "BLE",  # flake8-blind-except
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "G",  # flake8-logging-format
  "ERA",  # eradicate
  "ISC",  # flake8-implicit-str-concat
  "RUF",  # Ruff-specific rules
]
ignore = ["ANN101"]
unfixable = [
  "ERA",  # Don't remove commented-out code
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["invoke.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
