[project]
name = "dotfiles"
version = "0.1.0"
description = "My Personal dotfiles."
authors = [
    {name = "Federico Jaureguialzo", email = "fedejaure@gmail.com"}
]
readme = "README.md"
requires-python = "<3.12,>=3.11"
dependencies = []

[project.urls]
homepage = "https://github.com/fedejaure/dotfiles"
repository = "https://github.com/fedejaure/dotfiles"
"Bug Tracker" = "https://github.com/fedejaure/dotfiles/issues"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "<3.12,>=3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
invoke = "^2.2.1"
bump2version = "^1.0.1"

[tool.poetry.group.lint.dependencies]
isort = "^8.0.1"
black = "^26.3.1"
ruff = "^0.15.6"

[tool.poetry.group.security.dependencies]
safety = "^3.6.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.19.1"

[tool.ruff]
target-version = "py311"
output-format = "full"
line-length = 99
fix = true
extend-exclude = [
    "docs/*",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # flake8
  "C",  # mccabe
  "I",  # isort
  "N",  # pep8-naming
  "D",  # flake8-docstrings
  "ANN",  # flake8-annotations
  "S",  # flake8-bandit
  "BLE",  # flake8-blind-except
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "G",  # flake8-logging-format
  "ERA",  # eradicate
  "ISC",  # flake8-implicit-str-concat
  "RUF",  # Ruff-specific rules
]
ignore = ["ANN101"]
unfixable = [
  "ERA",  # Don't remove commented-out code
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["invoke.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
